<resources>
    <string name="app_name">Notes</string>
    <string name="saveButton">Save</string>
    <string name="noteDetailsHint">Details</string>
    <string name="noteTitleHint">Title</string>
    <string name="title">Title</string>
    <string name="timestamp">TIMESTAMP</string>
    <string name="cancel">Cancel</string>
    <string name="deleteNote">Delete note</string>
    <string name="noteTitleLabel">Title:</string>
    <string name="noteDetailsLabel">Details:</string>
</resources>
